# nginx-fastapi

./: LICENSE  README.md  docker-compose.yaml  gunicorn.conf.py  main.py  pyproject.toml
.docker/: Dockerfile
config/: nginx.conf  prometheus.yaml
docs/: configuration.md  technical-documentation.md
nginx_fastapi/: metrics.py
nginx_fastapi/core/: logger.py  settings.py
scripts/: entrypoint.sh
